--- a/quickps/meson.build
+++ b/quickps/meson.build
@@ -1,4 +1,3 @@
 exe = executable('qpsc', 'qpsc.cpp',
-  dependencies : [boost_dep],
-  link_with : [quickps],
-  install : true)
+  dependencies : [boost_dep, quickps_dep],
+  install : false)
