Implement HSL to RGB color conversion
- Add logo image
- Expand stack size (256 * 1024 -> 320 * 1024)
- Add style and state for canvas
- Apply eslint and fix some issues.
- Use TWGL for 3D scene construction.

--- a/libquickps/meson.build
+++ b/libquickps/meson.build
@@ -15,6 +15,7 @@ tests = files(
   'cairomm.test.cpp',
   'canvas/color.test.cpp',
   'canvas/context.test.cpp',
+  'canvas/state.test.cpp',
   'e2e.test.cpp',
   'isinstanceof.test.cpp',
   'paperjs.test.cpp',
